--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ seaborn>=0.12.0
 openai>=1.0.0
 langchain>=0.1.0
 langchain-openai>=0.0.5
+requests>=2.31.0
 
 # Statistical analysis
 statsmodels>=0.14.0
@@ -33,6 +34,7 @@ PyPDF2>=3.0.0
 python-dateutil>=2.8.0
 pytz>=2023.3
 tqdm>=4.65.0
+python-dotenv>=1.0.0
 
 # Development and testing
 pytest>=7.4.0
